src/snapshots/thndrs__ui__tests__normal_width_layout_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Model               ││ ▌ User (owais)     explain this repo                   │"
"│ ● umans-coder      ││                                                        │"
"│   max out 32768    ││Assistant       response                                │"
"│   search auto      ││                                                        │"
"│   in 0 out 0       ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  hello█                                                                     "
"                                                                                "
" model: umans-coder   search: auto  cwd: .                                      "
