src/snapshots/thndrs__ui__tests__plain_prose_no_highlight_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌session-20260701-120000───────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     explain this codebase                                     │"
"│                                                                              │"
"│Assistant       This is a Rust project using Ratatui for the TUI. It includes │"
"│                an agent loop, tool dispatch, and session persistence. The    │"
"│                code is organized into modules for app state, UI rendering,   │"
"│                tools, providers, and context management.                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" ✓ done   model: umans-coder   search: auto   tok: ↑0 ↓0  cwd: /repo            "
