src/snapshots/thndrs__ui__tests__plain_text_tool_no_highlight_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Model               ││tool            ✓ find_files#0 [ok]  pattern: main      │"
"│ ● umans-coder      ││   │ src/main.rs                                        │"
"│   max out 32768    ││   │ src/lib.rs                                         │"
"│   search auto      ││                                                        │"
"│   in 0 out 0       ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" model: umans-coder   search: auto  cwd: .                                      "
