src/snapshots/thndrs__ui__tests__provider_error_snapshot_80x24.snap
---
source: src/ui.rs
assertion_line: 636
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││ user  explain this repo                                │"
"│●  scratch          ││ error  ⚠ authentication failed (HTTP 401)              │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│✕  failed           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"✕   error                                                                       "
" model: umans-coder   search: native  cwd: .                                    "
