src/snapshots/thndrs__ui__tests__read_url_error_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Model               ││ ▌ User (owais)     read the internal admin page        │"
"│ ● umans-coder      ││                                                        │"
"│   max out 32768    ││tool            ✕ read_url#fetch-0 [failed]             │"
"│   search auto      ││                url: http://127.0.0.1/admin             │"
"│   in 0 out 0       ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ⠋  streaming      ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋                                                                             "
"  sending…  target: follow-up  steering: 0  follow-up: 0  Ctrl+T toggles        "
" model: umans-coder   search: auto  cwd: .                                      "
