src/snapshots/thndrs__ui__tests__read_url_result_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││ ▌ User (owais)     read the tokio docs page            │"
"│ ● scratch          ││                                                        │"
"│                    ││tool            ✓ read_url#fetch-0 [ok]  url: https://do│"
"│                    ││   │ title: tokio::lib - Rust                           │"
"│                    ││   │ url: https://docs.rs/tokio/latest/…                │"
"│                    ││   │ status: 200                                        │"
"│                    ││   │ diagnostics: status: 200, content_…                │"
"│                    ││   │ # tokio                                            │"
"│                    ││   │ A runtime for writing reliable asy…                │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›                                                                             "
"                                                                                "
" model: umans-coder   search: native  cwd: .                                    "
