src/snapshots/thndrs__ui__tests__reasoning_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌session-20260701-120000───────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     explain this repo                                         │"
"│                                                                              │"
"│Thinking        ⠋ Let me think about this... The repo is a Rust + Ratatui     │"
"│                  harness.                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋  █                                                                          "
"  target: follow-up  queued: 0/0  Ctrl+T toggles                                "
" ⠋ thinking   model: umans-coder   search: auto   tok: 0/0   max: 32768  cwd: . "
