src/snapshots/thndrs__ui__tests__running_tool_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││▌  User (owais)  explain this repo                      │"
"│ ● scratch          ││                                                        │"
"│                    ││Thought                    ✓ Let me read the Cargo.toml │"
"│                    ││                                                        │"
"│                    ││tool                       ⠋ read_file#0 [running]  path│"
"│                    ││                           │ Cargo.toml: 47 lines       │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ⠋  running tool   ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋                                                                             "
" running tool… esc to cancel                              umans-coder  native   "
" model: umans-coder   search: native  cwd: .                                    "
