src/snapshots/thndrs__ui__tests__rust_code_highlight_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││User (owais)               read main.rs                 │"
"│ ● scratch          ││ tool  ✓ read_file_range#0 [ok]  path: src/main.rs      │"
"│                    ││      │ fn main() {                                     │"
"│                    ││      │     println!("hello");                          │"
"│                    ││      │ }                                               │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ▌ ▶                                                                           "
" model: umans-coder   search: native  cwd: .                                    "
