src/snapshots/thndrs__ui__tests__rust_compiler_error_highlight_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││tool            ✕ run_shell#0 [failed]  program: cargo  │"
"│ ● scratch          ││   │ $ cargo build [one-shot failed 340ms]              │"
"│                    ││   │ ── stderr ──                                       │"
"│                    ││   │ error[E0308]: mismatched types                     │"
"│                    ││   │   --> src/main.rs:10:5                             │"
"│                    ││   │    |                                               │"
"│                    ││   │ 10 |     let x: i32 = "hello";                     │"
"│                    ││   │ …(3 more lines)                                    │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✕  failed         ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" model: umans-coder   search: native  cwd: .                                    "
