src/snapshots/thndrs__ui__tests__search_error_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌session-20260701-120000───────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     search for something                                      │"
"│                                                                              │"
"│tool            ✕ web_search#search-0 [failed]  query: something              │"
"│⚠ Error         search backend unavailable                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ✕  ▏                                                                          "
"  Error                                                                         "
" ✕ failed   model: umans-coder   search: auto   tok: ↑0 ↓0  cwd: /repo          "
