src/snapshots/thndrs__ui__tests__search_result_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌Transcript────────────────────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     search for rust async patterns                            │"
"│                                                                              │"
"│tool            ✓ web_search#search-0 [ok]  query: rust async patterns        │"
"│   │ server-side search: rust async patterns                                  │"
"│   │ result: https://tokio.rs/tutorial/async                                  │"
"│   │ result: https://rust-lang.org/async-book/                                │"
"│                                                                              │"
"│Assistant       Here are the results...                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" ✓ done   model: umans-coder   search: auto   tok: 0/0   max: 32768  cwd: .     "
